--- a/src/css/style.css
+++ b/src/css/style.css
@@ -49,6 +49,8 @@ a {
 
 header {
     display: flex;
+    position: fixed;
+    width: 100vw;
     flex-flow: row nowrap;
     padding: 0.5rem 3rem;
     background-color: rgba(56, 37, 65, 1);
@@ -145,9 +147,17 @@ h2 {
     justify-content: center;
 }
 
-#game-error {
+.game-error {
     display: none;
     text-align: center;
+    top : 25%;
+    background-color: rgba(231, 248, 246, 0.623);
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    z-index: 10;
+    color :rgba(56, 37, 65, 0.966);
+    font-weight: 800;
 }
 
 .game h2{
