--- a/src/css/style.css
+++ b/src/css/style.css
@@ -194,7 +194,7 @@ h2 {
 
 #background-dark-sky {
     position: absolute;
-    width: 100%; /* Double the width for repetition */
+    width: 100%;
     height: 100%;
     background: url(/src/img/backgrounds/layers/darksky.png) center center/cover;
     background-repeat: no-repeat;
@@ -203,7 +203,7 @@ h2 {
 
 #background-cloud {
     position: absolute;
-    width: 100%; /* Double the width for repetition */
+    width: 100%; 
     height: 100%;
     background: url(/src/img/backgrounds/layers/clouds_2.png) center center/cover;
     z-index: 1;
@@ -211,7 +211,7 @@ h2 {
 
 #background {
     position: absolute;
-    width: 100%; /* Double the width for repetition */
+    width: 100%;
     height: 100%;
     background: url(/src/img/backgrounds/layers/rocks_2.png) center center/cover;
     background-repeat: no-repeat;
@@ -229,25 +229,37 @@ h2 {
     display: none;
 }
 
-#obstacle {
+#roc1{
     position: absolute;
-    bottom: -15px;
+    bottom: -20px;
     left: 0;
-    width: 90px;
-    height: 60px;
+    width: 86.5px;
+    height: 70px;
     background : url(/src/img/obstacles/obstacle1.png); 
     background-size: cover;
     z-index: 3;
     display: none;
 }  
 
-#obstacle2 {
+#roc2 {
+    position: absolute;
+    bottom: -15px;
+    left: 0;
+    width: 86.5px;
+    height: 60px;
+    background : url(/src/img/obstacles/obstacle2.png); 
+    background-size: cover;
+    z-index: 3;
+    display: none;
+}  
+
+#roc3 {
     position: absolute;
     bottom: -15px;
     left: 0;
     width: 90px;
     height: 60px;
-    background : url(/src/img/obstacles/obstacle2.png); 
+    background : url(/src/img/obstacles/obstacle3.png); 
     background-size: cover;
     z-index: 3;
     display: none;
