--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,7 +52,7 @@ header {
     position: fixed;
     width: 100vw;
     flex-flow: row nowrap;
-    padding: 0.5rem 3rem;
+    padding: 0.5rem 10rem;
     background-color: rgba(56, 37, 65, 1);
     align-items: center;
     justify-content: space-between;
@@ -192,7 +192,7 @@ h2 {
 /* Game Elements */
 #background-sky {
     position: absolute;
-    width: 100%; /* Double the width for repetition */
+    width: 100%;
     height: 100%;
     background: url(/src/img/backgrounds/layers/sky.png) center center/cover;
     background-repeat: no-repeat;
@@ -200,7 +200,7 @@ h2 {
 
 #background-win {
     position: absolute;
-    width: 100%; /* Double the width for repetition */
+    width: 100%;
     height: 100%;
     background: url(/src/img/backgrounds/layers/game_background_win.png) center center/cover;
     background-repeat: no-repeat;
@@ -244,19 +244,17 @@ h2 {
     display: none;
 }
 
-#roc1{
+#obstacles{
     position: absolute;
-    bottom: -20px;
-    left: 0;
-    width: 86.5px;
-    height: 70px;
-    background : url(/src/img/obstacles/obstacle1.png); 
-    background-size: cover;
+    bottom: -10px;
+    width: 110px;
+    height: 80px;
+    background : url(/src/img/obstacles/Obstacles.png); 
     z-index: 3;
     display: none;
 }  
 
-#roc2 {
+/* #roc2 {
     position: absolute;
     bottom: -15px;
     left: 0;
@@ -278,7 +276,7 @@ h2 {
     background-size: cover;
     z-index: 3;
     display: none;
-}  
+}   */
 
 #start-message {
     position: absolute;
