--- a/src/css/style.css
+++ b/src/css/style.css
@@ -54,19 +54,17 @@ header {
     position: fixed;
     width: 100vw;
     flex-flow: row nowrap;
-    padding: 0.5rem 10rem;
+    padding: 0.5rem 10rem 0.5rem 10rem;
     background-color: rgba(56, 37, 65, 1);
     align-items: center;
     justify-content: space-between;
     line-height: 1rem;
     cursor: url(/src/img/icons/paw-solidblc.png), pointer;
+    z-index: 12;
 }
 
 header.sticky {
-    position: static;
-    top: 0;
-    background-color: rgba(56, 37, 65, 1);
-    z-index: 10;
+    bottom: 0;
 }
 
 span {
@@ -382,7 +380,7 @@ h2 {
 .cv-contain a {
     display: flex;
     justify-content: center;
-    
+    cursor: url(/src/img/icons/paw-solid.svg), pointer;
 }
 
 .hide-cv h2 {
@@ -404,11 +402,30 @@ h2 {
 
 footer {
     background: rgba(56, 37, 65, 1);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    z-index: 100;
 }
+.brands{
+    display: flex;
+    justify-content: center;
+    padding-top: 0.5rem;
+}
+
+.brands a {
+    cursor: url(/src/img/icons/paw-solidblc.png), pointer;
+}
+
+.brands i {
+    margin: 0.5rem;
+    color : white;
+}
+
 footer p {
     margin-bottom: 0;
-    padding: 1rem 6rem;
+    padding: 0.5rem 0 1rem;
     color : whitesmoke;
-    text-align: center;
     font-size: 0.7rem;
+    text-align: center;
 }
