--- a/src/css/style.css
+++ b/src/css/style.css
@@ -139,7 +139,7 @@ h2 {
 
 .mp-content p {
     font-size: 1rem;
-    font-weight: light;
+    font-weight: 400;
     letter-spacing: 1px;
     line-height: 1.5rem;
 }
